--- a/README
+++ b/README
@@ -1,4 +1,5 @@
-Codes in Python and Matlab to reproduce the results of our manuscript
-"Quantum computing formulation of some classical Hadamard matrix searching methods and its implementation on a quantum computer"
-should be reorganized under this branch. Meanwhile, it is uploded as a zip file in the following google drive:
+The Python and Matlab's codes to reproduce the results in our manuscript
+A.B. Suksmono and Y. Minato, "Quantum computing formulation of some classical Hadamard matrix searching methods and its implementation on a quantum computer" Sci. Rep. (under review)
+will be reorganized under this branch. Pleas note that you should have an access to D-Wave Quantum Computer to reproduce them.
+At the moment, they are zipped an put in the following google drive:
 >>> https://bit.ly/3HDa6kB <<<<
