--- a/README
+++ b/README
@@ -2,10 +2,11 @@ The Python and Matlab's codes to reproduce the results in our manuscript
 ---
  A.B. Suksmono and Y. Minato, "Quantum computing formulation of some classical Hadamard 
  matrix searching methods and its implementation on a quantum computer" Sci. Rep. (under review)
+ << now (2022) it is published >> https://www.nature.com/articles/s41598-021-03586-0 <<
 ---
 will be reorganized under this branch. Please note that you should have an access to 
 the D-Wave Quantum Computer to reproduce them correctly. 
-At the moment, the codes are zipped an put into the Google Drive with the following link:
+At the moment, the codes are zipped and put into Google Drive with the following link:
    >>> https://bit.ly/3HDa6kB <<<<
 Some of the codes are not included in the zip file. Please contact me (absuksmono@gmail.com)
-if you need them.   
+if you need them.  
